<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/booksToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:elevation="3dp"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/navigation_books"
        app:titleTextColor="@color/colorWhite" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/booksNavigationAddBook"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:fontFamily="@font/fugura_medium"
        android:text="@string/navigation_add_book" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/booksNavigationRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/booksList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_book" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/booksNavigationDictionary"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:fontFamily="@font/fugura_medium"
        android:text="@string/navigation_dictionary" />

</LinearLayout>